Change Auth method
Changed from MD5 to Bcrypt.
Added cookie support.
Token auth enabled.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 
 _notes/dwsync.xml
+
+assets/global/scripts/_notes/dwsync.xml
+
+assets/global/scripts/_notes/dwsync.xml
+
+assets/global/scripts/_notes/dwsync.xml
+
+includes/_notes/dwsync.xml
