--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ assets/global/scripts/_notes/dwsync.xml
 assets/global/scripts/_notes/dwsync.xml
 
 includes/_notes/dwsync.xml
+
+plugins/ckeditor/lang/es.js
