--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,2 @@
-
-_notes/dwsync.xml
-
-assets/global/scripts/_notes/dwsync.xml
-
-assets/global/scripts/_notes/dwsync.xml
-
-assets/global/scripts/_notes/dwsync.xml
-
-includes/_notes/dwsync.xml
-
-plugins/ckeditor/lang/es.js
+dwsync.xml
+_notes
